--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,30 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.7.21'
-    id 'application'
+    id 'java'
+    id 'pmd'
+    id 'maven-publish'
 }
 
 group = 'org.cabradati'
-version = '1.0-SNAPSHOT'
+version = '1.3'
+
+jar.destinationDir(file("./server/plugins"))
 
 repositories {
     mavenCentral()
+    maven {
+        name = 'papermc-repo'
+        url = 'https://papermc.io/repo/repository/maven-public/'
+    }
+    maven {
+        name = 'sonatype'
+        url = 'https://oss.sonatype.org/content/groups/public/'
+    }
 }
 
 dependencies {
+    implementation 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
@@ -26,6 +40,20 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = '1.8'
 }
 
-application {
-    mainClassName = 'MainKt'
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/CabraDaTI/minecraft-plugin-betterbattle"
+            credentials {
+                username = System.getenv("USERNAME")
+                password = System.getenv("TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
