--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'org.cabradati'
-version = '1.3'
+version = '1.4'
 
 jar.destinationDir(file("./server/plugins"))
 
@@ -24,8 +24,11 @@ repositories {
 
 dependencies {
     implementation 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
+    testImplementation 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'io.mockk:mockk:1.13.2'
 }
 
 test {
